--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,36 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- layout("/layouts/boilerplate") %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WanderLust</title>
-</head>
+  <body>
+    <div class="row">
+      <div class="col-8 offset-2">
+        <h3>Create a New Listing</h3>
 
-<body>
-  <h3>Create a New Listing</h3>
-  <form method="POST" action="/listings">
-    <input type="title" name="listing[title]" placeholder="enter title" type="text">
-    <br>
-    <br>
-    <textarea name="listing[description]" placeholder="enter description"></textarea>
-    <br>
-    <br>
-    <input type="text" name="listing[image]" placeholder="enter image URL/Link" type="text">
-    <br>
-    <br>
-    <input type="number" name="listing[price]" name="enter price">
-    <br>
-    <br>
-    <input type="text" name="listing[country]" placeholder="enter country">
-    <br>
-    <br>
-    <input type="text" name="listing[location]" placeholder="enter location">
-    <br>
-    <br>
-    <button>Add</button>
+        <form method="POST" action="/listings">
 
-  </form>
-</body>
+          <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="title" name="listing[title]" placeholder="add a catchy title" type="text" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" placeholder="enter description" class="form-control"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="image" class="form-label">Image</label>
+            <input type="text" name="listing[image]" placeholder="enter image URL/Link" type="text"
+              class="form-control">
+          </div>
+          <div class="row">
+            <div class="mb-3 col-md-4">
+              <label for="price" class="form-label">Price</label>
+              <input type="number" name="listing[price]" name="1200" class="form-control">
+            </div>
+            <div class="mb-3 col-8">
+              <label for="country" class="form-label">Country</label>
+              <input type="text" name="listing[country]" placeholder="India" class="form-control">
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input type="text" name="listing[location]" placeholder="enter location" class="form-control">
+          </div>
 
-</html>
+          <br>
+          <br>
+          <button class="btn btn-primary add-btn mt-3">Add</button>
+<br>
+          <br>
+        </form>
+      </div>
+    </div>
+  </body>
