--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,153 @@
-body{
+/* body{
   background-color: bisque;
+}
+
+.f-info-links a{
+  text-decoration: none;
+  color: #222222;
+}
+
+.f-info-links a:hover {
+  text-decoration: underline;;
+}
+
+.f-info-links, .f-info-social, .f-info-brand{
+  width:10px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.f-info-social{
+  font-size: 1.2rem;
+  margin-right: 2rem;
+}
+
+.f-info-social i{
+  margin: 1rem;
+  font-size: 1.2rem;
+  width:100%;
+
+}
+
+.f-info{
+  text-align: center;
+  height: 8rem;
+  display: flex;
+  background-color: #ffffff;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+} */
+body {
+  /* font-family: ; */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+  flex: 1;
+}
+
+.f-info-links a {
+  text-decoration: none;
+  color: #222222;
+}
+
+.f-info-links a:hover {
+  text-decoration: underline;
+}
+
+.f-info-socials {
+  width: 100%;
+  font-size: 1.5rem;
+  margin-right: 2rem;
+}
+
+
+.f-info {
+  text-align: center;
+  height: 8rem;
+  background-color: #ebebeb;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: space-evenly;
+}
+
+.f-info-socials i {
+  font-size: 1.2rem;
+  margin-right: 1rem;
+  vertical-align: middle;
+}
+
+.f-info-links,
+.f-info-socials,
+.f-info-brand {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Cards */
+.card {
+  border: none !important;
+  margin-bottom: 2rem;
+}
+
+.card-img-top {
+  border-radius: 1rem !important;
+  width: 100% !important;
+  object-fit: cover in !important;
+}
+
+.card-body {
+  padding: 0 !important;
+}
+
+.card-text p {
+  font-weight: 400 !important;
+}
+
+.listing-link {
+  text-decoration: none;
+}
+
+/* Card Effect */
+.card-img-overlay {
+  opacity: 0;
+}
+
+.card-img-overlay:hover {
+  opacity: 0.2;
+  background-color: white;
+}
+
+/* new page */
+.add-btn {
+  background-color: #fe424d;
+  border: none;
+}
+
+/* Edit Page */
+.edit-btn {
+  background-color: #fe424d;
+  border: none;
+}
+
+/* Show page */
+.show-img{
+  height: 30vh;
+}
+
+.btns{
+  display: flex;
+}
+
+.show-card{
+  padding-left:0;
+  padding-right:0;
 }
