--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,29 @@
-<% layout("/layouts/boilerplate") %>
-<body>
-  <h1>All Listings</h1>
-  <form method="GET" action="/listing/new">
-    <button>Create New Listing</button>
-  </form>
-  <% for(let listing of allListings) { %>
-    <li><a href="/listings/<%= listing._id%>"><%= listing.title %></a></li>
-  <% } %>
-</body>
+< %- layout("/layouts/boilerplate") %>
+
+  <body>
+    <h1>All Listings</h1>
+    <form method="GET" action="/listing/new">
+      <button>Create New Listing</button>
+    </form>
+    <div class="row  row-col-lg-3 row-col-md-2 row-col-sm-1">
+      <% for(let listing of allListings) { %>
+        <a class="listing-link" href="/listings/<%= listing._id %>">
+          <div class="card col">
+            <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image"
+              style="width:20rem; height:20rem;">
+            <div class="card-img-overlay"> </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                <b>
+                  <%= listing.title %>
+                </b> <br>
+                <%= listing.price.toLocaleString("en-IN") %> / night
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </a>
+        <% } %>
+    </div>
+  </body>
