--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,25 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WonderLust</title>
-</head>
-<body>
-  <h3>Listing Details : </h3>
-  <ul>
-    <li><%= listing.title %></li>
-    <li><%= listing.description %></li>
-    <li><%= listing.price %></li>
-    <li><%= listing.location %></li>
-    <li><%= listing.country %></li>
-  </ul>
-  <br>
-  <a href="/listings/<%=listing._id%>/edit">Edit</a>
-  <br>
-  <br>
-  <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-    <button>Delete this listing</button>
-  </form>
-</body>
-</html>
+<%- layout("/layouts/boilerplate") %>
+
+  <body>
+    <div class="row">
+      <div class="col-8 offset-2">
+        <h3>Listing Details : </h3>
+      </div>
+
+      <div class="card col-6 offset-2 show-card">
+        <img src="<%= listing.image.url %>" alt="listing_image" class="card-img-top show-img">
+        <div class="card-body">
+          <p class="card-text">
+            <b>
+              <%= listing.title %>
+            </b>
+            <%= listing.description %>
+              <br>
+              &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
+                <%= listing.location %> <br>
+                  <%= listing.country %>
+
+          </p>
+        </div>
+      </div>
+      <br>
+      <div class="btns">
+        <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-3">Edit</a>
+        <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+          <button class="btn btn-dark offset-3">Delete</button>
+        </form>
+      </div>
+
+    </div>
+  </body>
+
+  </html>
