--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,15 +1,25 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/">Home</a>
         <a class="nav-link" href="/listings">Listings</a>
-        <a class="nav-link" href="/listing/new">New Listings</a>
-        <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+        <a class="nav-link" href="/listings/new">Add New Listings</a>
+      </div>
+
+      <div class="navbar-nav ms-auto">
+        <% if (!currentUser) { %>
+          <a class="nav-link" href="/signup">Sign Up</a>
+          <a class="nav-link" href="/login">Login</a>
+          <% } else { %>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% } %>
       </div>
     </div>
   </div>
